[gd_scene load_steps=7 format=2]

[ext_resource path="res://controllers.gd" type="Script" id=1]
[ext_resource path="res://gamepad/left1.png" type="Texture" id=2]
[ext_resource path="res://gamepad/attackright.png" type="Texture" id=3]
[ext_resource path="res://gamepad/right2.png" type="Texture" id=4]
[ext_resource path="res://gamepad/jump.png" type="Texture" id=5]
[ext_resource path="res://gamepad/Sprite-0002.png" type="Texture" id=6]

[node name="controllers" type="Node2D"]
position = Vector2( -0.667419, 2.00226 )
script = ExtResource( 1 )

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2( 6.67419, 10.009 )
scale = Vector2( 2.2835, 1.87818 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( 63.4139, 9.99998 )
scale = Vector2( 2.283, 1.878 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="JumpButton" type="TouchScreenButton" parent="."]
position = Vector2( 524.935, 6.00681 )
scale = Vector2( 2.283, 1.878 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[node name="AttackRightButton" type="TouchScreenButton" parent="."]
position = Vector2( 570.649, 13.3506 )
scale = Vector2( 2.283, 1.878 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="AttackLeftButton" type="TouchScreenButton" parent="."]
position = Vector2( 485.885, 11.3394 )
scale = Vector2( 2.283, 1.878 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="released" from="LeftButton" to="." method="_on_LeftButton_released"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_RightButton_released"]
[connection signal="pressed" from="JumpButton" to="." method="_on_JumpButton_pressed"]
[connection signal="released" from="JumpButton" to="." method="_on_JumpButton_released"]
[connection signal="pressed" from="AttackRightButton" to="." method="_on_AttackRightButton_pressed"]
[connection signal="released" from="AttackRightButton" to="." method="_on_AttackRightButton_released"]
[connection signal="pressed" from="AttackLeftButton" to="." method="_on_AttackLeftButton_pressed"]
[connection signal="released" from="AttackLeftButton" to="." method="_on_AttackLeftButton_released"]
